--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,16 @@ name: Test
 # For more information see: https://help.github.com/en/actions/automating-your-workflow-with-github-actions/events-that-trigger-workflows#about-workflow-events)
 on:
   push:
-    - master
-    - production
+    branches:
+      - master
+      - production
   pull_request:
 
 jobs:
   test:
     name: Run
-
+    runs-on: ubuntu-latest
+    
     # Define a strategy for running these tests on various operating systems and Node.js version in parallel.
     strategy:
       matrix:
