--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,11 @@
 name: Test
 
+# GitHub repo configuration:
+# 1. If you have protected branches, go to Branches > edit protected branch > enable 'Require status checks to pass before
+#    merging' and select the 'Test' status check.
+
+# Note: make sure to commit package-lock.json, this is needed for `npm ci`.
+
 # Defines the trigger for this action (by default on push to master/production and on all pull requests)
 # For more information see: https://help.github.com/en/actions/automating-your-workflow-with-github-actions/events-that-trigger-workflows#about-workflow-events)
 on:
@@ -13,27 +19,24 @@ jobs:
   test:
     name: Run
     runs-on: ubuntu-latest
-    
-    # Define a strategy for running these tests on various operating systems and Node.js version in parallel.
+
+    # Define a strategy for running these tests on various operating systems and Node.js versions in parallel.
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [macos-latest, ubuntu-latest]
         node: [8, 12]
 
     steps:
       # Checks out the current repository.
       - uses: actions/checkout@v2
+        with:
+          # The token below is only necessary if you want to push the version bump to a protected branch
+          token: ${{ secrets.HOMEY_GITHUB_ACTIONS_BOT_PERSONAL_ACCESS_TOKEN }}
 
       # Configures a Node.js environment.
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }} # Important: use the matrix.node property when using a matrix strategy
-
-      # Only use the ssh-agent action below if your repository has private git dependencies (see README.md for
-      # instructions on how to configure an ssh key).
-      # - uses: webfactory/ssh-agent@v0.2.0
-      #  with:
-      #    ssh-private-key: ${{ secrets.SSH_KEY }}
 
       # Run `npm ci` to re-create your local environment (make sure to commit your package-lock.json!).
       # Finally run `npm test` (make sure you have defined a proper test command in package.json).
