Update names of eslint/test jobs

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   eslint:
-    name: Run
+    name: ESLint
     runs-on: ubuntu-latest
     steps:
       # Checks out the current repository.
