chore: update build tasks

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "mocha --reporter list",
     "lint": "eslint .",
-    "build": "grunt jsdoc",
-    "serve": "grunt connect",
-    "build:watch": "npm run build && concurrently -n serve,watch 'npm run serve' 'grunt watch'"
+    "serve": "concurrently \"serve build/docs/\" \"npm run jsdoc:watch\"",
+    "build": "npm run jsdoc",
+    "jsdoc": "cd docs; jsdoc -c jsdoc.json",
+    "jsdoc:watch": "npm-watch jsdoc"
   },
   "repository": {
     "type": "git",
@@ -24,20 +25,32 @@
   "bugs": {
     "url": "https://github.com/athombv/node-zigbee-clusters/issues"
   },
+  "engines": {
+    "node": ">=12"
+  },
   "homepage": "https://github.com/athombv/node-zigbee-clusters#readme",
   "devDependencies": {
     "braintree-jsdoc-template": "^3.3.0",
     "concurrently": "^5.1.0",
-    "grunt": "^1.0.4",
-    "grunt-contrib-connect": "^2.1.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-jsdoc": "^2.4.1",
     "eslint": "^6.8.0",
     "eslint-config-athom": "^2.0.8",
+    "jsdoc": "^3.6.4",
+    "npm-watch": "^0.6.0",
+    "serve": "^11.3.1",
     "mocha": "^7.1.0"
   },
   "dependencies": {
     "@athombv/data-types": "^1.0.3",
     "debug": "^4.1.1"
+  },
+  "watch": {
+    "jsdoc": {
+      "patterns": [
+        "lib"
+      ],
+      "extensions": [
+        "js"
+      ]
+    }
   }
 }
