--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "mocha --reporter list",
     "lint": "eslint .",
-    "serve": "concurrently \"serve build/docs/\" \"npm run jsdoc:watch\"",
-    "build": "npm run jsdoc",
-    "jsdoc": "cd docs; jsdoc -c jsdoc.json",
-    "jsdoc:watch": "npm-watch jsdoc"
+    "serve": "concurrently \"serve build/\" \"npm run build:watch\"",
+    "build": "jsdoc --configure ./docs/jsdoc.json",
+    "build:clean": "rm -rf ./build",
+    "build:watch": "watch \"npm run build:clean && npm run build\" lib docs \"node_modules/homey-jsdoc-template\""
   },
   "repository": {
     "type": "git",
@@ -30,27 +30,18 @@
   },
   "homepage": "https://github.com/athombv/node-zigbee-clusters#readme",
   "devDependencies": {
-    "braintree-jsdoc-template": "^3.3.0",
+    "homey-jsdoc-template": "github:athombv/homey-jsdoc-template#1.0.5",
     "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-config-athom": "^2.1.0",
-    "jsdoc": "^3.6.4",
+    "jsdoc": "^3.6.7",
+    "jsdoc-ts-utils": "^2.0.0",
+    "watch": "^1.0.2",
     "mocha": "^7.2.0",
-    "npm-watch": "^0.6.0",
     "serve": "^11.3.1"
   },
   "dependencies": {
     "@athombv/data-types": "^1.0.4",
     "debug": "^4.1.1"
-  },
-  "watch": {
-    "jsdoc": {
-      "patterns": [
-        "lib"
-      ],
-      "extensions": [
-        "js"
-      ]
-    }
   }
 }
