--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.1",
   "description": "Zigbee Cluster Library for Node.js",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "mocha --reporter list",
     "lint": "eslint .",
