--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/athombv/node-zigbee-clusters#readme",
   "devDependencies": {
     "@athombv/jsdoc-template": "^1.6.1",
+    "@types/sinon": "^17.0.3",
     "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-config-athom": "^2.1.0",
@@ -39,6 +40,7 @@
     "jsdoc-ts-utils": "^2.0.0",
     "mocha": "^10.1.0",
     "serve": "^14.0.1",
+    "sinon": "^19.0.2",
     "watch": "^1.0.2"
   },
   "dependencies": {
