--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "mocha --reporter list",
     "lint": "eslint .",
+    "generate-types": "node scripts/generate-types.js",
     "serve": "concurrently \"serve build/\" \"npm run build:watch\"",
     "build": "jsdoc --configure ./docs/jsdoc.json",
     "build:clean": "rm -rf ./build",
@@ -32,6 +33,7 @@
   "homepage": "https://github.com/athombv/node-zigbee-clusters#readme",
   "devDependencies": {
     "@athombv/jsdoc-template": "^1.6.1",
+    "@types/node": "^25.0.10",
     "@types/sinon": "^17.0.3",
     "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
@@ -41,6 +43,7 @@
     "mocha": "^10.1.0",
     "serve": "^14.0.1",
     "sinon": "^19.0.2",
+    "typescript": "^5.9.3",
     "watch": "^1.0.2"
   },
   "dependencies": {
