--- a/.github/workflows/generate-types.yml
+++ b/.github/workflows/generate-types.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Generate TypeScript types
         run: npm run generate-types
 
+      - name: Validate TypeScript types compile
+        run: npx tsc --noEmit index.d.ts
+
       - name: Check for changes
         id: check-changes
         run: |
