Change trigger branch from 'develop' to 'master'

--- a/.github/workflows/generate-types.yml
+++ b/.github/workflows/generate-types.yml
@@ -3,7 +3,7 @@ name: Generate TypeScript Types
 on:
   push:
     branches:
-      - develop
+      - master
     paths:
       - 'lib/clusters/**/*.js'
       - 'scripts/generate-types.js'
