--- a/.github/workflows/generate-types.yml
+++ b/.github/workflows/generate-types.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.HOMEY_GITHUB_ACTIONS_BOT_PERSONAL_ACCESS_TOKEN }}
 
       - name: Generate TypeScript types
         run: npm run generate-types
