--- a/.github/workflows/generate-types.yml
+++ b/.github/workflows/generate-types.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
+          registry-url: "https://npm.pkg.github.com"
 
       - name: Install dependencies
         run: npm ci
